TEIID-339 expanding and correcting the check to use all rows and making the condition to push distinct stricter.